--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                                     <p>With lots of unique blocks, you can easily build a page without coding.</p>
                                 </div>
                             </div>
-                            <div class="orta-2-3">
-                                <img src="./img/mini-icon-3.png" alt="">
+                            <div class="orta-2-3 bottom">
+                                <img src="./img/mini-icon-11.png" alt="">
                                 <div class="orta-2-4">
                                     <h4>Great Support</h4>
                                     <p>With lots of unique blocks, you can easily build a page without coding.</p>
@@ -72,6 +72,112 @@
                 </div>
             </div>
         </section>
+        <!-- section tugatildi 
+        yangi section boshlandi -->
+        <section class="rasm-uchun-3">
+            <div class="container">
+                <div class="eng-oson">
+                    <h2>50k+ users are <br> using landing page.</h2>
+                    <p>Create custom landing pages with Omega that converts more visitors than any website. With lots of unique <br>  blocks, you can easily build a page without coding.</p>
+                    <a href="#">Get Started</a>
+                    <div class="keremas"></div>
+                </div>
+            </div>
+        </section>
+        <section class="rasm-uchun-6">
+            <div class="container">
+                <div class="sal-qiyin-2">
+                    <h2>It’s everything <br> you’ll ever need</h2>
+                    <ul class="sal-qiyin">
+                        <li class="sal-qiyin-3">
+                            <img src="./img/mini-icon-6.png" alt="">
+                            <p>50+ Unique Design Blocks</p>
+                        </li>
+                        <li class="sal-qiyin-3">
+                            <img src="./img/mini-icon-7.png" alt="">
+                            <p>Multiple Layouts</p>
+                        </li>
+                        <li class="sal-qiyin-3">
+                            <img src="./img/mini-icon-8.png" alt="">
+                            <p>Mobile First Design</p>
+                        </li>
+                        <li class="sal-qiyin-3 custom">
+                            <img src="./img/mini-icon-5.png" alt="">
+                            <p>Fully Responsive</p>
+                        </li>
+                        <li class="sal-qiyin-3 custom">
+                            <img src="./img/mini-icon-12.png" alt="">
+                            <p>Bootstrap 4 Framework</p>
+                        </li>
+                        <li class="sal-qiyin-3">
+                            <img src="./img/mini-icon-3.png" alt="">
+                            <p>Humanly Support</p>
+                        </li>
+                        <li class="sal-qiyin-3">
+                            <img src="./img/mini-icon-1.png" alt="">
+                            <p>Lifetime Updates</p>
+                        </li>
+                        <li class="sal-qiyin-3">
+                            <img src="./img/mini-icon-2.png" alt="">
+                            <p>Rich Documentation</p>
+                        </li>
+                    </ul>
+                    <div class="keresiz"></div></div>
+                </div>
+            </div>
+        </section>
+        <!-- section tugatildi 
+        yangi section boshlandi -->
+        <section class="rasm-ucun-6">
+            <div class="container">
+                <div class="eng-oson-2">
+                    <h2>Save tons of time <br> on design & coding.</h2>
+                    <p>Create custom landing pages with Omega that converts more visitors than any website. With lots of unique blocks, you can easily build a page without coding.</p>
+                    <a href="#">Get Started</a>
+                    <div class="keresiz-2"></div></div>
+                </div>
+            </div>
+        </section>
+        <!-- section tugadi 
+        yangi section boshlandi -->
+        <section class="rasm-ucun-7">
+            <div class="container">
+                <div class="koment-heding">
+                    <h2>Customer reviews</h2>
+                    <p>Create custom landing pages with Omega that converts more visitors than any website.</p>
+                </div>
+                <div class="komment">
+                    <div class="komment-2">
+                        <p>OMG! I cannot believe that I have got a brand new landing page after getting Omega. It was super easy to edit and publish.</p>
+                        <div class="komment-3">
+                            <img src="./img/glavniy-rasmi.png" alt="">
+                            <div>
+                                <p>Jonathan Taylor</p>
+                                <a href="#">CEO at Creativex</a>
+                            </div>
+                        </div> 
+                    </div>
+                    <div class="komment-2">
+                        <p>OMG! I cannot believe that I have got a brand new landing page after getting Omega. It was super easy to edit and publish.</p>
+                        <div class="komment-3">
+                            <img src="./img/glavniy-rasmi-2.png" alt="">
+                            <div class="komment-4">
+                                <p>Marie Stanley</p>
+                                <a href="#">Digital Marketer, Writer</a>
+                            </div>
+                        </div> 
+                    </div>
+                </div>
+                <div class="komment-6"> 
+                    <img src="./img/Rectangle Copy.png" alt="">
+                    <img src="./img/Rectangle Copy 2.png" alt="">
+                    <img src="./img/Rectangle Copy 2.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- section yakunlandi
+        yangi section -->
+        section
     </nav>
 </body>
 </html>
