update html css

--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
                             <img src="./img/mini-icon-8.png" alt="">
                             <p>Mobile First Design</p>
                         </li>
-                        <li class="sal-qiyin-3 custom">
+                        <li class="sal-qiyin-3 custom-1">
                             <img src="./img/mini-icon-5.png" alt="">
                             <p>Fully Responsive</p>
                         </li>
-                        <li class="sal-qiyin-3 custom">
+                        <li class="sal-qiyin-3 custom-1">
                             <img src="./img/mini-icon-12.png" alt="">
                             <p>Bootstrap 4 Framework</p>
                         </li>
@@ -177,7 +177,64 @@
         </section>
         <!-- section yakunlandi
         yangi section -->
-        section
+        <section class="rasm-ucun-8">
+            <div class="container">
+                <div class="eng-oson-3">
+                    <h2>Get started now</h2>
+                    <p>Create custom landing pages with Omega that converts more visitors than any website. With lots of unique blocks, you can easily build a page without coding.</p>
+                    <form action="#">
+                        <img src="./img/email-84.png" alt="">
+                        <input type="email" placeholder="Email address">
+                        <button>Get Started</button>
+                    </form>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <div class="eng-paski">
+                    <div class="eng-paski-3">
+                        <h4>Omega</h4>
+                        <p>With lots of unique blocks, you can easily build a page without coding.</p>
+                        <a href="#"><img src="./img/Social (1).png" alt=""></a>
+                    </div>
+                    <div>
+                        <ul class="eng-paski-2">
+                            <li class="eng-paski-4">
+                                About
+                                <ul class="eng-paski-5">
+                                    <li>Our mission</li>
+                                    <li>Our story</li>
+                                    <li>Team Members</li>
+                                </ul>
+                            </li>
+                            <li class="eng-paski-4">
+                                Learn
+                                <ul class="eng-paski-5">
+                                    <li>Tutorials</li>
+                                    <li> How  it works</li>
+                                    <li>F.A.Q</li>
+                                </ul>
+                            </li>
+                            <li class="eng-paski-4">
+                                Stories
+                                <ul class="eng-paski-5">
+                                    <li>Blog</li>
+                                    <li>Tech stories</li>
+                                </ul>
+                            </li>
+                            <li class="eng-paski-4">
+                                Contact us
+                                <ul class="eng-paski-5">
+                                    <li><a href="#"> support@uxtheme.net</a></li>
+                                    <li><a href="">+133-394-3439-1435</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
     </nav>
 </body>
 </html>
