--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
             <div class="container">
                 <div class="orta-2-1">
                     <div class="orta-2-2">
+                        <div class="orta-2-5">
+                            <h2>Build a perfect landing page fast.</h2>
+                            <p>Create custom landing pages with Omega that converts more visitors than any website. With lots of unique blocks, you can easily build a page without coding.</p>
+                            <a href="#">Learn more</a>
+                        </div>
                         <div>
                             <div class="orta-2-3">
                                 <img src="./img/mini-icon-7.png" alt="">
@@ -64,11 +69,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="orta-2-5">
-                        <h2>Build a perfect landing page fast.</h2>
-                        <p>Create custom landing pages with Omega that converts more visitors than any website. With lots of unique blocks, you can easily build a page without coding.</p>
-                        <a href="#">Learn more</a>
-                    </div>
+                    
+                    <div class="keraksiz-5"></div>
                 </div>
             </div>
         </section>
@@ -219,18 +221,18 @@
                             <li class="eng-paski-4">
                                 Stories
                                 <ul class="eng-paski-5">
-                                    <li>Blog</li>
+                                     <li>Blog</li>
                                     <li>Tech stories</li>
                                 </ul>
                             </li>
                             <li class="eng-paski-4">
                                 Contact us
                                 <ul class="eng-paski-5">
-                                    <li><a href="#"> support@uxtheme.net</a></li>
+                                    <li><a href="#">support@uxtheme.net</a></li>
                                     <li><a href="">+133-394-3439-1435</a></li>
                                 </ul>
                             </li>
-                        </ul>
+                        </ul>    
                     </div>
                 </div>
             </div>
