--- a/index.html
+++ b/index.html
@@ -78,11 +78,17 @@
         yangi section boshlandi -->
         <section class="rasm-uchun-3">
             <div class="container">
-                <div class="eng-oson">
-                    <h2>50k+ users are <br> using landing page.</h2>
-                    <p>Create custom landing pages with Omega that converts more visitors than any website. With lots of unique <br>  blocks, you can easily build a page without coding.</p>
-                    <a href="#">Get Started</a>
-                    <div class="keremas"></div>
+                <div class="tuzatish">
+                    <div class="eng-oson">
+                        <h2>50k+ users are <br> using landing page.</h2>
+                        <p>Create custom landing pages with Omega that converts more visitors than any website. With lots of unique <br>  blocks, you can easily build a page without coding.</p>
+                        <a href="#">Get Started</a>
+                        <div class="keremas"></div>
+                    </div>
+                    <div>
+                        <img class="tuzatish-3" src="./img/Oval.png" alt="">
+                        <img class="tuzatish-2" src="./img/BG-img-3.jpg" alt="">
+                    </div>
                 </div>
             </div>
         </section>
@@ -132,11 +138,17 @@
         yangi section boshlandi -->
         <section class="rasm-ucun-6">
             <div class="container">
-                <div class="eng-oson-2">
-                    <h2>Save tons of time <br> on design & coding.</h2>
-                    <p>Create custom landing pages with Omega that converts more visitors than any website. With lots of unique blocks, you can easily build a page without coding.</p>
-                    <a href="#">Get Started</a>
-                    <div class="keresiz-2"></div></div>
+                <div>
+                    <div class="eng-oson-2">
+                        <h2>Save tons of time <br> on design & coding.</h2>
+                        <p>Create custom landing pages with Omega that converts more visitors than any website. With lots of unique blocks, you can easily build a page without coding.</p>
+                        <a href="#">Get Started</a>
+                        <div class="keresiz-2"></div></div>
+                    </div>
+                    <div class="tuzatish-4">
+                        <img class="tuzatish-5" src="./img/Group.png" alt="">
+                        <img class="tuzatish-6" src="./img/Img.png" alt="">
+                    </div>
                 </div>
             </div>
         </section>
@@ -181,15 +193,22 @@
         yangi section -->
         <section class="rasm-ucun-8">
             <div class="container">
-                <div class="eng-oson-3">
-                    <h2>Get started now</h2>
-                    <p>Create custom landing pages with Omega that converts more visitors than any website. With lots of unique blocks, you can easily build a page without coding.</p>
-                    <form action="#">
-                        <img src="./img/email-84.png" alt="">
-                        <input type="email" placeholder="Email address">
-                        <button>Get Started</button>
-                    </form>
-                </div>
+               <div class="tuzatish-11">
+                    <div>
+                        <img class="tuzatish-8" src="./img/Img-1.png" alt="">
+                        <img class="tuzatish-7" src="./img/oval-2.png""> 
+                    </div>
+                    <div class="eng-oson-3">
+                        <h2>Get started now</h2>
+                        <p>Create custom landing pages with Omega that converts more visitors than any website. With lots of unique blocks, you can easily build a page without coding.</p>
+                        <form action="#">
+                            <img src="./img/email-84.png" alt="">
+                            <input type="email" placeholder="Email address">
+                            <button>Get Started</button>
+                        </form>
+                    </div>
+                    
+               </div>
             </div>
         </section>
         <section>
