--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="tuzatish">
                     <div class="eng-oson">
                         <h2>50k+ users are <br> using landing page.</h2>
-                        <p>Create custom landing pages with Omega that converts more visitors than any website. With lots of unique <br>  blocks, you can easily build a page without coding.</p>
+                        <p>Create custom landing pages with Omega that converts more visitors than any website. With lots of unique  blocks, you can easily build a page without coding.</p>
                         <a href="#">Get Started</a>
                         <div class="keremas"></div>
                     </div>
